[gd_scene load_steps=3 format=3 uid="uid://c0upekkk1aadd"]

[ext_resource type="Script" path="res://scene/topping.gd" id="1_1oxla"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c6tr8"]
radius = 31.0161

[node name="topping" type="Area2D"]
script = ExtResource("1_1oxla")

[node name="ImageOnBurger" type="Sprite2D" parent="."]

[node name="ImageOnPantry" type="Sprite2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -33.0
offset_top = 33.0
offset_right = 38.0
offset_bottom = 56.0
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c6tr8")

[node name="SelectedSound" type="AudioStreamPlayer2D" parent="."]

[node name="PlacedSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
